--- a/main.tex
+++ b/main.tex
@@ -164,7 +164,7 @@ We now have the power to choose a \(p_{z}\) pseudopotential solely based on the 
 
 \subsection{Computational Details}
 
-Here summarised are details of the methods used in calculation. All Hartree-Fock, DFT and time-dependent DFT (TD-DFT) energy calculations are performed with TURBOMOLE 7.1. The basis set used throughout is the default def-SV(P). Wherever possible, planar (C\(_{S}\)) symmetry is used.The convergence energy is left at the defaults of \(10^{-7}\) (\texttt{\$scfconv = 7}) for SCF and \(10^{-6}\) for DFT. All other settings are left as default unless otherwise specified.
+Here summarised are details of the methods used in calculation. All Hartree-Fock, DFT and time-dependent DFT (TD-DFT) energy calculations are performed with TURBOMOLE 7.1. The basis set used throughout is the default def-SV(P). Wherever possible, planar (C\(_{S}\)) symmetry is used.The convergence energy is left at the defaults of \(10^{-7}\) (\texttt{\$scfconv = 7}) for SCF and \(10^{-6}\) for DFT. Geometry optimisations are performed with \texttt{jobex}. All other settings are left as default unless otherwise specified.
 
 When running these calculations, the occupation of orbitals must be specified manually in the TURBOMOLE control file, as the extended-Huckel-guess method used by the package to supply the initial guess does not work with the pseudo-carbon system, and will cause the program to crash if attempted.
 
@@ -178,8 +178,6 @@ Once we started to look at excitation and ionisation energies however, optimisat
 
 \section{Results and discussion}
 
-We aim first at reproducing the values for CH\(_{3}\) as given in Table \ref{table:ref_values_1}.
-
 \begin{table}[ht]
 \caption{Reference Values for Relevant Orbital Energies} 
 \centering
@@ -191,11 +189,11 @@ HF & -10.537 & -10.363 \\
 DFT & -6.726 & -6.632 \\
 \hline
 \end{tabular}
-\label{table:ref_values_1} % is used to refer this table in the text
+\label{table:ref_values_1}
 \end{table}
 
 \begin{table}[ht]
-\caption{Optimised s-orbital pseudopotentials for CH\(_{3}\) \((r = 0.5)\)}
+\caption{Optimised \(s\)-orbital pseudopotentials for CH\(_{3}\) \((r = 0.5)\)}
 \begin{tabular}{c c c}
 \hline\hline
 Calculation Type & Coefficient & Exponent \\ [0.5ex]
@@ -210,7 +208,12 @@ HF & -7.524 & 10.0 \\
 DFT & -7.678 & 10.0 \\
 \hline
 \end{tabular}
+\label{table:ch3_s_potentials}
 \end{table}
+
+We aim first at reproducing the values for CH\(_{3}\) as given in Table \ref{table:ref_values_1}. The reference CH\(_{3}\) is created and optimised as described in the 'Computational Details' section. The pseudo-system is then set up, erasing the hydrogen atoms, setting the carbon charge \(Z_{nucleus} = 1\) and applying \(s\) pseudo-potentials, as well as selecting the correct orbital for the remaining electron. Table \ref{table:ch3_s_potentials} displays some of our results, with the \(s\)-potentials optimised to generate the correct HOMO energy. Promisingly, we are able to produce many sets of potentials that give the correct energy with coefficients and exponents of the same order of magnitude as the basis set.
+
+Next, we take some of these potentials to create a pseudo-ethene system, with the results shown in Table \ref{table:ethene_s_pseudo}. [FURTHER COMMENTS].
 
 \begin{table}[ht]
 \caption{Pseudo-ethene results}
@@ -228,7 +231,12 @@ HF & -7.521 & 10.0 & -7.905 \\
 DFT & -7.679 & 10.0 & -8.447 \\
 \hline
 \end{tabular}
+\label{table:ethene_s_pseudo}
 \end{table}
+
+[p POTENTIAL SELCTION DETAILS?]
+
+Our next step adds a \(p\)-shaped potential centred on the pseudo-carbon along the \(z\)-axis, with Table \ref{table:ch3_p_potentials} displaying the results. The \(p_{z}\) potential is selected using the proceedure described above [SECTION REFERENCE], with the exponent chosen to give the maximum possible overlap with the \(p_{z}\) orbital, and the matching \(Z_{eff}\) coefficient calculated from the exponent and overlap. The \(s\)-potentials are optimised once more to give the correct HOMO energy for CH\(_{3}\). We again take these potentials to create a pseudo-ethene molecule, with the results shown in Table \ref{table:ethene_p_potentials}. We can see that these potentials seem to transfer more effectively from the CH\(_{3}\) system to the ethene, suggesting therefore that whilst the \(s\)-potentials can affect both the \(p_{z}\) and \(\pi\) orbitals, they cannot alone represent the relationship between them.
 
 \begin{table}[ht]
 \caption{Optimised s-orbital pseudopotentials for CH\(_{3}\)}
@@ -249,7 +257,12 @@ HF & 10.381 & 10.0 \\
 DFT & 18.351 & 10.0 \\
 \hline
 \end{tabular}
+\label{table:ch3_p_potentials}
 \end{table}
+
+[SHOULD I HAVE SOME RESULTS TO SHOW THE SAME IS TRUE OF USING JUST THE P POTENTIALS?]
+
+Having successfully created the pseudo-ethene with the correct HOMO, our next task is to have our pseudo-system represent other properties of the real one. Reference values for the singlet-triplet \(\pi-\pi*\) excitation and first ionisation energies of ethene are given in Table \ref{table:ref_ethene_exitation_energies}. Testing the relevant energies for our pseudo-systems, the early results are not promising, as we can see from Table \ref{table:table:early_ethene_excitations}. However, after we abandon the notion of sticking strictly to a \(p_{z}\)-potential exponent that gives the maximum overlap with the real orbital, we discover there is a "sweet spot" around which the correct values begin to emerge. We speculate in section [REFERENCE] as the reason for this. Table [PUT THE TABLE IN ALEX] shows our optimal result, chosen to give HOMO, excitation and ionisation energies closest to the reference values from Table \ref{table:ref_ethene_exitation_energies}. 
 
 \begin{table}[ht]
 \caption{Pseudo-ethene results}
@@ -270,6 +283,7 @@ HF & 10.381 & 10.0 & -14.061 \\
 DFT & 18.351 & 10.0 & -12.543 \\
 \hline
 \end{tabular}
+\label{table:ethene_p_potentials}
 \end{table}
 
 \begin{table}[ht]
@@ -285,6 +299,7 @@ Cation & -77.631 \\
 Singlet-Cation difference & -0.334 & -9.091 \\
 \hline
 \end{tabular}
+\label{table:ref_ethene_exitation_energies}
 \end{table}
 
 \begin{table}[ht]
@@ -302,30 +317,10 @@ Singlet-Cation difference & -0.334 & -9.091 \\
 5.0 & 0.936 & -3.533 & -29.583 & -29.722 \\
 \hline
 \end{tabular}
+\label{table:early_ethene_excitations}
 \end{table}
 
-
-
-\begin{figure}
-%\includegraphics{properties.jpg}
-\caption{Comparison of the properties (in eV) obtained with pseudo-potentials
-and in all electron calculations.}
-\end{figure}
-
-
-\begin{table}[ht]
-\caption{\%-errors across calculation types for chain alkenes}
-\begin{tabular}{c c c c c c c}
-\hline\hline
-Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH & TD-DFT \\
-\hline
-\(\pi - \pi*\) excitation error (\%) & \(\leq\) 12.5 &\(\leq\) 7.3 & \(\leq\) 12.8 & \(\leq\) 14.1 & \(\leq\) 17.2 & \(\leq\) 2.9 \\
-Ionisation error (\%) & \(\leq\) 7.3 & \(\leq\) 6.3 & \(\leq\) 9.0 & \(\leq\) 10.0 & \(\leq\) 9.7 & - \\
-Singlet HOMO error (\%) & \(\leq\) 3.0 & \(\leq\) 5.3 & \(\leq\) 9.8 & \(\leq\) 12.1 & \(\leq\) 11.4 & - \\
-\hline
-\end{tabular}
-\end{table}
-
+With these new potentials we test them against a series of chain alkenes up to length C\(_{12}\), using a variety of methods. Figures \ref{fig:alkenes_hf_dft} and \ref{fig:alkenes_tddft} show the results. Table \ref{table:alkene_errors} gives a breakdown of the percentage errors for each method across all molecules tested.
 
 \begin{figure}[ht]
 \includegraphics[width=8cm]{hf_homo}
@@ -345,12 +340,31 @@ Singlet HOMO error (\%) & \(\leq\) 3.0 & \(\leq\) 5.3 & \(\leq\) 9.8 & \(\leq\) 
 \includegraphics[width=8cm]{tpssh_homo}
 \includegraphics[width=8cm]{tpssh_ionisation}
 \includegraphics[width=8cm]{tpssh_excitation}
+\caption{\%-errors across calculation types for chain alkenes}
+\label{fig:alkenes_hf_dft}
 \end{figure}
 \begin{figure}
 \includegraphics[width=8cm]{tddft_excitation_cd}
 \includegraphics[width=8cm]{tddft_excitation}
+\caption{\%-errors across calculation types for chain alkenes}
+\label{fig:alkenes_tddft}
 \end{figure}
 
+\begin{table}[ht]
+\caption{\%-errors across calculation types for chain alkenes}
+\begin{tabular}{c c c c c c c}
+\hline\hline
+Calculation Type & HF & PBE0 & PBE & TPSS & TPSSH & TD-DFT \\
+\hline
+\(\pi - \pi*\) excitation error (\%) & \(\leq\) 12.5 &\(\leq\) 7.3 & \(\leq\) 12.8 & \(\leq\) 14.1 & \(\leq\) 17.2 & \(\leq\) 2.9 \\
+Ionisation error (\%) & \(\leq\) 7.3 & \(\leq\) 6.3 & \(\leq\) 9.0 & \(\leq\) 10.0 & \(\leq\) 9.7 & - \\
+Singlet HOMO error (\%) & \(\leq\) 3.0 & \(\leq\) 5.3 & \(\leq\) 9.8 & \(\leq\) 12.1 & \(\leq\) 11.4 & - \\
+\hline
+\end{tabular}
+\label{table:alkene_errors}
+\end{table}
+
+\subsection{On Potential-Orbital Overlap}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% The "Acknowledgement" section can be given in all manuscript
