beginning og introduction

--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -1,10 +1,68 @@
-@article{Drujon2013,
+
+@article{huzinaga_1994_1995,
+  volume = {73},
+  number = {5},
+  journal = {Canadian Journal of Chemistry},
+  author = {Huzinaga, Sigeru},
+  year = {1995},
+  pages = {619--628}
+}
+
+@article{dolg_relativistic_2012,
+  volume = {112},
+  shorttitle = {Relativistic {{Pseudopotentials}}},
+  number = {1},
+  journal = {Chemical Reviews},
+  author = {Dolg, Michael and Cao, Xiaoyan},
+  year = {2012},
+  keywords = {density-functional theory,density-functional theory,dirac-hartree-fock,dirac-hartree-fock,effective-core potentials,effective-core potentials,electronic-structure   calculations,electronic-structure calculations,main-group elements,main-group elements,nmr chemical-shifts,nmr chemical-shifts,quantum monte-carlo,quantum monte-carlo,spin-orbit operators,spin-orbit operators,transition-metal atoms,transition-metal atoms,valence basis-sets,valence basis-sets},
+  pages = {403--480}
+}
+
+@article{drujon_pseudopotentials_2013,
   volume = {34},
   number = {1},
   journal = {Journal of Computational Chemistry},
   author = {Drujon, J. and Carissan, Y.},
   year = {2013},
   pages = {49--59}
+}
+
+@article{wesolowski_frozen-density_2015,
+  volume = {115},
+  number = {12},
+  journal = {Chemical Reviews},
+  author = {Wesolowski, Tomasz A. and Shedge, Sapana and Zhou, Xiuwen},
+  year = {2015},
+  pages = {5891--5928}
+}
+
+@article{chung_oniom_2015,
+  volume = {115},
+  number = {12},
+  journal = {Chemical Reviews},
+  author = {Chung, Lung Wa and Sameera, W. M. C. and Ramozzi, Romain and Page, Alister J. and Hatanaka, Miho and Petrova, Galina P. and Harris, Travis V. and Li, Xin and Ke, Zhuofeng and Liu, Fengyi and Li, Hai-Bei and Ding, Lina and Morokuma, Keiji},
+  year = {2015},
+  pages = {5678--5796}
+}
+
+@article{gordon_fragmentation_2012-1,
+  volume = {112},
+  shorttitle = {Fragmentation {{Methods}}},
+  number = {1},
+  journal = {Chemical Reviews},
+  author = {Gordon, Mark S. and Fedorov, Dmitri G. and Pruitt, Spencer R. and Slipchenko, Lyudmila V.},
+  year = {2012},
+  pages = {632--672}
+}
+
+@article{dyall_formal_2001,
+  volume = {41},
+  number = {1},
+  journal = {Journal of Chemical Information and Computer Sciences},
+  author = {Dyall, Kenneth G.},
+  year = {2001},
+  pages = {30--37}
 }
 
 
